syntax = "proto3";

package file_service;

option go_package = "./pb";

service FileService {
  // Upload a file (client-side streaming)
  rpc Upload(stream UploadFileRequest) returns (UploadFileResponse);

  // Download a file (server-side streaming)
  rpc Download(DownloadFileRequest) returns (stream DownloadFileResponse);

  // List available files
  rpc List(ListFilterRequest) returns (ListResponse);
}

message fileMetadata{
  string file_name = 1;
  uint32 size = 2;
}

// Request message for uploading a file
message UploadFileRequest {
  string file_name = 1;
  bytes chunk_data = 2; // File data sent in chunks
}

// Response message for uploading a file
message UploadFileResponse {
  fileMetadata file = 1;
}

// Request message for downloading a file
message DownloadFileRequest {
  string file_name = 1;
}

// Response message for downloading a file
message DownloadFileResponse {
  bytes chunk_data = 1; // File data sent in chunks
}

// Request message for filter the list of files (empty)
message ListFilterRequest{

}

// Response message for listing files
message ListResponse{
  repeated fileMetadata file = 1;

}